--- a/BlazorChess/Client/Chess/Pages/AIGamePage.razor
+++ b/BlazorChess/Client/Chess/Pages/AIGamePage.razor
@@ -7,18 +7,18 @@
 
 <ChessContextWrapper Context="Context">
 
-	<ChessBot @ref="@OpponentInput" InputForSide="@OpponentSide"/>
-	<MouseInput @ref="@PlayerInput" InputForSide="@PlayerSide">
-		<ChessRenderer @ref="Renderer" Spritesheet="Spritesheet"/>
-	</MouseInput>
-	<ChessSpritesheet @ref="Spritesheet"/>
+	<div @ref="@GameFrame" class="bg-light">
+		<ChessBot @ref="@OpponentInput" InputForSide="@OpponentSide"/>
+		<MouseInput @ref="@PlayerInput" InputForSide="@PlayerSide">
+			<ChessRenderer @ref="Renderer" Spritesheet="Spritesheet"/>
+		</MouseInput>
+		<ChessSpritesheet @ref="Spritesheet"/>
+	</div>
 
 	<hr/>
 	<button class="btn btn-primary" @onclick="RestartGame"> Restart </button> 
+	<FullScreenButton TargetElement="GameFrame"></FullScreenButton>
 	<GameStatus @ref="GameStatus"/>
 
 </ChessContextWrapper>
-
-
-
 
