feat: Add page titles and meta tags

--- a/BlazorChess/Client/Chess/Online/Pages/CreateGamePage.razor
+++ b/BlazorChess/Client/Chess/Online/Pages/CreateGamePage.razor
@@ -6,7 +6,13 @@
 @inject NavigationManager Navigation
 @page "/Chess/Online/Create"
 
+<PageTitle>Create online game</PageTitle>
 <h3>Create online game</h3>
+
+<HeadContent>
+	<meta property="og:title" content="Create online chess match">
+	<meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+</HeadContent>
 
 <GameSettings Settings="settings"/>
 <hr />
